V1.8 Полностью готовая и рабочая версия приложения такси сервис.